crates/oxc_linter/src/snapshots/require_param_name.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint-plugin-jsdoc(require-param-name): Missing JSDoc `@param` name.
   ╭─[require_param_name.tsx:3:17]
 2 │                       /**
 3 │                        * @param
   ·                          ──────
 4 │                        */
   ╰────
  help: Add name to `@param` tag.

  ⚠ eslint-plugin-jsdoc(require-param-name): Missing JSDoc `@param` name.
   ╭─[require_param_name.tsx:3:17]
 2 │                       /**
 3 │                        * @param {string}
   ·                          ──────
 4 │                        */
   ╰────
  help: Add name to `@param` tag.
