crates/oxc_linter/src/snapshots/require_property_name.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint-plugin-jsdoc(require-property-name): Missing name in @property tag.
   ╭─[require_property_name.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @property
   ·                          ─────────
 5 │                        */
   ╰────
  help: Add a type name to this @property tag.

  ⚠ eslint-plugin-jsdoc(require-property-name): Missing name in @property tag.
   ╭─[require_property_name.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @property {string}
   ·                          ─────────
 5 │                        */
   ╰────
  help: Add a type name to this @property tag.

  ⚠ eslint-plugin-jsdoc(require-property-name): Missing name in @property tag.
   ╭─[require_property_name.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @prop {string}
   ·                          ─────
 5 │                        */
   ╰────
  help: Add a type name to this @property tag.
