crates/oxc_linter/src/snapshots/require_property_type.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint-plugin-jsdoc(require-property-type): Missing type in @property tag.
   ╭─[require_property_type.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @property
   ·                          ─────────
 5 │                        */
   ╰────
  help: Add a {type} to this @property tag.

  ⚠ eslint-plugin-jsdoc(require-property-type): Missing type in @property tag.
   ╭─[require_property_type.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @property foo
   ·                          ─────────
 5 │                        */
   ╰────
  help: Add a {type} to this @property tag.

  ⚠ eslint-plugin-jsdoc(require-property-type): Missing type in @property tag.
   ╭─[require_property_type.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @property foo bar
   ·                          ─────────
 5 │                        */
   ╰────
  help: Add a {type} to this @property tag.

  ⚠ eslint-plugin-jsdoc(require-property-type): Missing type in @property tag.
   ╭─[require_property_type.tsx:4:17]
 3 │                        * @typedef {SomeType} SomeTypedef
 4 │                        * @prop foo
   ·                          ─────
 5 │                        */
   ╰────
  help: Add a {type} to this @property tag.
